# hecto

./: -s pages  .gitignore  .vimspector.json  Cargo.toml  README.md  test.txt
old/: gap_buffer.rs  status_message.rs  window.rs
src/: document.rs  editor.rs  gap_buffer.rs  main.rs  modes.rs  rows.rs  status_message.rs  terminal.rs  ui.rs  window.rs
src.old/: editor.rs  gap_buffer.rs  main.rs  modes.rs
